--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,59 @@
+.mainContent {
+  width: 1000px;
+}
+
+.spinnerContainer {
+  height: 100px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  animation: spinning 3s linear infinite;
+}
+
 .spinner{
   font-size: 140px;
+  padding-bottom: 100px;
 }
-.spinner:after {
+.spinner::after {
   content: '◌';
+  color: rgb(119, 119, 225);
+}
+
+.buttonsContainer {
+  height: 50px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+#generateStockDataButton {
+  height: 40px;
+  width: 200px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(119, 119, 225);
+  border: 2px;
+  font-size: 16px;
+  color: white;
 }
 
 #chart {
     border: 1px solid black;
+    background-color: rgb(244, 245, 255);
+}
+
+body {
+  background-color: rgb(255, 255, 255);
+}
+@keyframes spinning {
+    from { 
+        transform:rotate(0deg); 
+    }
+    to { 
+        transform:rotate(360deg); 
+    }
 }
